# iDoklad-Helper

./: .gitignore  ARCHITECTURE-FINAL.md  CHANGELOG-NATIVE-PARSER.md  CHANGELOG.md  COMPLETE-FEATURE-SUMMARY.md  DASHBOARD-FEATURES.md  DATA-TRANSFORMER-GUIDE.md  DIAGNOSTICS-GUIDE.md  DOCUMENTATION-INDEX.md  ENHANCED-SYSTEM-OVERVIEW.md  FATAL-ERROR-FIX.md  FEATURE-SUMMARY.md  FINAL-ARCHITECTURE.md  FINAL-FIX.md  FIXES-2024-10-21.md  FIXES-APPLIED.md  IDOKLAD-API-FIX.md  IDOKLAD-API-INTEGRATION.md  INSTALL-OCR.md  INSTALLATION.md  INTEGRATION-COMPLETE.md  OCR-README.md  OCR-SPACE-SETUP.md  OPERATION-GUIDE.md  PDF-CO-AI-PARSER-ENHANCEMENT.md  PDF-PARSER-README.md  PDFCO-FIX.md  PDFCO-INTEGRATION.md  PRECISE-DATA-HANDLING.md  PROBLEMS.md  QUEUE-VIEWER-GUIDE.md  README.md  SETTINGS-CLEANUP.md  SIMPLIFIED-SYSTEM.md  TROUBLESHOOTING.md  USER_MANUAL.md  config.example.toml  debug-email-processing.php  debug-reprocessing-issue.php  idoklad-invoice-processor.php  (+12 more)
assets/: admin.css  admin.js  email-processing.js  integration-admin.js  log-management.js  pdf-co-debug.js  queue-reprocessing.js
examples/: test-pdf-parser.php
includes/: class-admin.php  class-chatgpt-integration.php  class-database.php  class-email-monitor-v3.php  class-email-monitor.php  class-idoklad-admin-integration.php  class-idoklad-api-v3-integration.php  class-idoklad-api.php  class-idoklad-czech-normalizer.php  class-idoklad-data-transformer.php  class-invoice-ai-rest.php  class-logger.php  class-notification-v3.php  class-notification.php  class-ocr-processor.php  class-pdf-co-admin-debug.php  (+8 more)
(+20 files in other folders)
