[project]
name = "idoklad-helper"
version = "0.1.0"
description = "Utilities for automating iDoklad invoice processing workflows"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Automation Bot"}]
dependencies = [
    "requests>=2.31",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
